--- a/spec/cassettes/bad_youtube_url.yml
+++ b/spec/cassettes/bad_youtube_url.yml
@@ -13,31 +13,29 @@ http_interactions:
       message: Not Found
     headers:
       Date:
-      - Sun, 13 Apr 2014 22:47:31 GMT
+      - Tue, 15 Apr 2014 02:52:18 GMT
       Server:
       - gwiseguy/2.0
-      Content-Type:
-      - text/html; charset=utf-8
-      X-Xss-Protection:
-      - 1; mode=block; report=https://www.google.com/appserve/security-bugs/log/youtube
-      X-Frame-Options:
-      - ALLOWALL
-      Cache-Control:
-      - no-cache
+      X-Content-Type-Options:
+      - nosniff
       P3p:
       - CP="This is not a P3P policy! See http://support.google.com/accounts/bin/answer.py?answer=151657&hl=en
         for more info."
+      X-Frame-Options:
+      - ALLOWALL
       Expires:
       - Tue, 27 Apr 1971 19:44:06 EST
-      X-Content-Type-Options:
-      - nosniff
+      X-Xss-Protection:
+      - 1; mode=block; report=https://www.google.com/appserve/security-bugs/log/youtube
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - text/html; charset=utf-8
       Content-Length:
       - '9'
-      Alternate-Protocol:
-      - 443:quic
     body:
-      encoding: UTF-8
+      encoding: US-ASCII
       string: Not Found
     http_version: 
-  recorded_at: Sun, 13 Apr 2014 22:47:31 GMT
+  recorded_at: Tue, 15 Apr 2014 02:52:19 GMT
 recorded_with: VCR 2.9.0
