--- a/spec/cassettes/invalid_json.yml
+++ b/spec/cassettes/invalid_json.yml
@@ -35,7 +35,7 @@ http_interactions:
       - '9'
     body:
       encoding: US-ASCII
-      string: '{}'
+      string: Not Found
     http_version: 
   recorded_at: Tue, 15 Apr 2014 02:52:19 GMT
 recorded_with: VCR 2.9.0
