--- a/spec/cassettes/bad_youtube_url.yml
+++ b/spec/cassettes/bad_youtube_url.yml
@@ -6,36 +6,44 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ''
-    headers: {}
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Host:
+      - www.youtube.com
   response:
     status:
       code: 404
       message: Not Found
     headers:
       Date:
-      - Tue, 15 Apr 2014 02:52:18 GMT
+      - Fri, 06 Jun 2014 03:02:54 GMT
       Server:
       - gwiseguy/2.0
-      X-Content-Type-Options:
-      - nosniff
       P3p:
       - CP="This is not a P3P policy! See http://support.google.com/accounts/bin/answer.py?answer=151657&hl=en
         for more info."
+      Content-Type:
+      - text/html; charset=utf-8
+      Cache-Control:
+      - no-cache
       X-Frame-Options:
       - ALLOWALL
       Expires:
       - Tue, 27 Apr 1971 19:44:06 EST
       X-Xss-Protection:
       - 1; mode=block; report=https://www.google.com/appserve/security-bugs/log/youtube
-      Cache-Control:
-      - no-cache
-      Content-Type:
-      - text/html; charset=utf-8
+      X-Content-Type-Options:
+      - nosniff
       Content-Length:
       - '9'
     body:
-      encoding: US-ASCII
-      string: '{}'
+      encoding: UTF-8
+      string: Not Found
     http_version: 
-  recorded_at: Tue, 15 Apr 2014 02:52:19 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Fri, 06 Jun 2014 03:02:54 GMT
+recorded_with: VCR 2.9.2
