--- a/spec/cassettes/billy.yml
+++ b/spec/cassettes/billy.yml
@@ -6,16 +6,26 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ''
-    headers: {}
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Host:
+      - www.youtube.com
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Tue, 15 Apr 2014 02:52:15 GMT
+      - Fri, 06 Jun 2014 02:59:55 GMT
       Server:
       - gwiseguy/2.0
+      Cache-Control:
+      - no-cache
       X-Frame-Options:
       - ALLOWALL
       X-Xss-Protection:
@@ -24,25 +34,23 @@ http_interactions:
       - Tue, 27 Apr 1971 19:44:06 EST
       X-Content-Type-Options:
       - nosniff
+      Content-Type:
+      - application/json
       P3p:
       - CP="This is not a P3P policy! See http://support.google.com/accounts/bin/answer.py?answer=151657&hl=en
         for more info."
-      Content-Type:
-      - application/json
-      Cache-Control:
-      - no-cache
       Transfer-Encoding:
       - chunked
     body:
-      encoding: US-ASCII
-      string: ! '{"type": "video", "provider_url": "http:\/\/www.youtube.com\/", "thumbnail_url":
-        "http:\/\/i1.ytimg.com\/vi\/7q5Ltr0qc8c\/hqdefault.jpg", "thumbnail_height":
-        360, "width": 480, "provider_name": "YouTube", "author_url": "http:\/\/www.youtube.com\/user\/billyonthestreettv",
-        "title": "Billy on the Street: Amateur Speed Sketching!", "thumbnail_width":
-        480, "version": "1.0", "html": "\u003ciframe width=\"480\" height=\"270\"
+      encoding: UTF-8
+      string: '{"thumbnail_height": 360, "html": "\u003ciframe width=\"480\" height=\"270\"
         src=\"http:\/\/www.youtube.com\/embed\/7q5Ltr0qc8c?feature=oembed\" frameborder=\"0\"
-        allowfullscreen\u003e\u003c\/iframe\u003e", "height": 270, "author_name":
-        "billyonthestreettv"}'
+        allowfullscreen\u003e\u003c\/iframe\u003e", "title": "Billy on the Street:
+        Amateur Speed Sketching!", "height": 270, "provider_name": "YouTube", "author_url":
+        "http:\/\/www.youtube.com\/user\/billyonthestreettv", "type": "video", "author_name":
+        "billyonthestreettv", "thumbnail_url": "http:\/\/i1.ytimg.com\/vi\/7q5Ltr0qc8c\/hqdefault.jpg",
+        "provider_url": "http:\/\/www.youtube.com\/", "thumbnail_width": 480, "version":
+        "1.0", "width": 480}'
     http_version: 
-  recorded_at: Tue, 15 Apr 2014 02:52:17 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Fri, 06 Jun 2014 02:59:55 GMT
+recorded_with: VCR 2.9.2
