--- a/spec/cassettes/murmuration.yml
+++ b/spec/cassettes/murmuration.yml
@@ -6,7 +6,15 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ''
-    headers: {}
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Host:
+      - vimeo.com
   response:
     status:
       code: 200
@@ -15,9 +23,9 @@ http_interactions:
       Age:
       - '1'
       Date:
-      - Tue, 15 Apr 2014 02:52:16 GMT
+      - Fri, 06 Jun 2014 02:59:55 GMT
       Expires:
-      - Tue, 15 Apr 2014 02:53:16 GMT
+      - Fri, 06 Jun 2014 03:00:55 GMT
       Content-Length:
       - '793'
       Connection:
@@ -26,30 +34,30 @@ http_interactions:
       - 1.1 varnish
       - dnet-dca
       Etag:
-      - ! '"e19e6eea37661a8e029d8f8e3b2116f3e97ea8f0"'
+      - '"5ffeebb02a34c4b0edaf908978ae3dc7a08a8994"'
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Access-Control-Allow-Headers:
       - X-Requested-With
       Last-Modified:
-      - Tue, 15 Apr 2014 02:10:30 GMT
+      - Fri, 06 Jun 2014 02:09:21 GMT
       Vary:
       - Accept-Encoding
       Content-Type:
       - application/json
       X-Varnish:
-      - '1677378251'
+      - '1670035520'
       X-Varnish-Cache:
       - '0'
       Nncoection:
       - close
       X-Vserver:
-      - 10.90.128.197
+      - dfvimeowebproxy3
     body:
-      encoding: US-ASCII
-      string: ! '{"type":"video","version":"1.0","provider_name":"Vimeo","provider_url":"https:\/\/vimeo.com\/","title":"Murmuration","author_name":"Islands
+      encoding: UTF-8
+      string: '{"type":"video","version":"1.0","provider_name":"Vimeo","provider_url":"https:\/\/vimeo.com\/","title":"Murmuration","author_name":"Islands
         & Rivers","author_url":"http:\/\/vimeo.com\/islandsandrivers","is_plus":"1","html":"<iframe
         src=\"\/\/player.vimeo.com\/video\/31158841\" width=\"400\" height=\"300\"
         frameborder=\"0\" title=\"Murmuration\" webkitallowfullscreen mozallowfullscreen
@@ -57,5 +65,5 @@ http_interactions:
         Islands And Rivers\n\nFollow us @Islands_Rivers\n\nA chance encounter and
         shared moment with one of natures greatest and most fleeting phenomena.","thumbnail_url":"http:\/\/i.vimeocdn.com\/video\/448600816_295x166.jpg","thumbnail_width":295,"thumbnail_height":221,"video_id":31158841}'
     http_version: 
-  recorded_at: Tue, 15 Apr 2014 02:52:17 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Fri, 06 Jun 2014 02:59:55 GMT
+recorded_with: VCR 2.9.2
