--- a/spec/cassettes/voodoo_people.yml
+++ b/spec/cassettes/voodoo_people.yml
@@ -6,52 +6,50 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ''
-    headers: {}
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Host:
+      - coub.com
   response:
     status:
       code: 200
       message: OK
     headers:
       Server:
-      - Apache
-      Access-Control-Allow-Origin:
-      - ! '*'
-      Access-Control-Allow-Headers:
-      - X-Requested-With
-      Expires:
-      - Tue, 15 Apr 2014 02:53:16 GMT
-      Last-Modified:
-      - Sun, 13 Apr 2014 19:06:59 GMT
-      Etag:
-      - ! '"3ee9abac968dd90ff3d61a6c3ed1e6aac5a93a7d"'
-      Vary:
-      - Accept-Encoding
+      - nginx/1.4.4
+      Date:
+      - Fri, 06 Jun 2014 02:59:56 GMT
       Content-Type:
-      - application/json
+      - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
-      Date:
-      - Tue, 15 Apr 2014 02:52:16 GMT
-      X-Varnish:
-      - '273732503'
-      Age:
-      - '0'
-      Via:
-      - 1.1 varnish
-      X-Varnish-Cache:
-      - '0'
-      Cneonction:
-      - close
-      X-Vserver:
-      - 10.90.128.147
+      Connection:
+      - keep-alive
+      Vary:
+      - Accept-Encoding
+      Status:
+      - 200 OK
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 271c6fd4f094ad88c161efa47990e5e1
+      X-Runtime:
+      - '0.011259'
+      X-Rack-Cache:
+      - miss
     body:
-      encoding: US-ASCII
-      string: |
-        {"type":"video","version":"1.0","width":942,"height":720,"title":"voodoo people","url":"http://coub.com/view/rcd14cm",
-        "thumbnail_url":"http://cdn1.akamai.coub.com/coub/simple/cw_image/8007107badd/a0f3e90c986074ac81f30/med_1374583486_00033.jpg",
-        "thumbnail_width":640,"thumbnail_height":488,"author_name":"Igor","author_url":"http://coub.com/coubcreator",
-        "provider_name":"Coub","provider_url":"http://coub.com/",
-        "html":"<iframesrc=\"http://coub.com/embed/rcd14cm\"allowfullscreen=\"true\"frameborder=\"0\"width=\"640\"height=\"489\"></iframe>"}
+      encoding: UTF-8
+      string: '{"type":"video","version":"1.0","width":"942","height":"720","title":"voodoo
+        people","url":"http://coub.com/view/rcd14cm","thumbnail_url":"http://cdn1.akamai.coub.com/coub/simple/cw_image/8007107badd/a0f3e90c986074ac81f30/med_1374583486_00033.jpg","thumbnail_width":"640","thumbnail_height":"488","author_name":"\u0418\u0433\u043e\u0440\u044c","author_url":"http://coub.com/coubcreator","provider_name":"Coub","provider_url":"http://coub.com/","html":"<iframe
+        src=\"http://coub.com/embed/rcd14cm\" allowfullscreen=\"true\" frameborder=\"0\"
+        width=\"640\" height=\"489\"></iframe>"}'
     http_version: 
-  recorded_at: Sun, 01 Jun 2014 02:52:17 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Fri, 06 Jun 2014 02:59:56 GMT
+recorded_with: VCR 2.9.2
