--- a/spec/cassettes/youtube/billy.yml
+++ b/spec/cassettes/youtube/billy.yml
@@ -19,38 +19,37 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 10 Jun 2014 19:31:19 GMT
+      - Tue, 10 Jun 2014 19:33:02 GMT
       Server:
       - gwiseguy/2.0
-      X-Frame-Options:
-      - ALLOWALL
+      X-Content-Type-Options:
+      - nosniff
+      X-Xss-Protection:
+      - 1; mode=block; report=https://www.google.com/appserve/security-bugs/log/youtube
       P3p:
       - CP="This is not a P3P policy! See http://support.google.com/accounts/bin/answer.py?answer=151657&hl=en
         for more info."
-      X-Content-Type-Options:
-      - nosniff
-      Cache-Control:
-      - no-cache
       Expires:
       - Tue, 27 Apr 1971 19:44:06 EST
+      Cache-Control:
+      - no-cache
       Content-Type:
       - application/json
-      X-Xss-Protection:
-      - 1; mode=block; report=https://www.google.com/appserve/security-bugs/log/youtube
+      X-Frame-Options:
+      - ALLOWALL
       Alternate-Protocol:
       - 443:quic
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"author_url": "http:\/\/www.youtube.com\/user\/billyonthestreettv",
-        "thumbnail_width": 480, "height": 270, "author_name": "billyonthestreettv",
-        "title": "Billy on the Street: Amateur Speed Sketching!", "width": 480, "provider_name":
-        "YouTube", "version": "1.0", "html": "\u003ciframe width=\"480\" height=\"270\"
-        src=\"http:\/\/www.youtube.com\/embed\/7q5Ltr0qc8c?feature=oembed\" frameborder=\"0\"
-        allowfullscreen\u003e\u003c\/iframe\u003e", "provider_url": "http:\/\/www.youtube.com\/",
-        "thumbnail_url": "http:\/\/i1.ytimg.com\/vi\/7q5Ltr0qc8c\/hqdefault.jpg",
-        "type": "video", "thumbnail_height": 360}'
+      string: '{"thumbnail_width": 480, "type": "video", "height": 270, "author_name":
+        "billyonthestreettv", "thumbnail_url": "http:\/\/i1.ytimg.com\/vi\/7q5Ltr0qc8c\/hqdefault.jpg",
+        "html": "\u003ciframe width=\"480\" height=\"270\" src=\"http:\/\/www.youtube.com\/embed\/7q5Ltr0qc8c?feature=oembed\"
+        frameborder=\"0\" allowfullscreen\u003e\u003c\/iframe\u003e", "title": "Billy
+        on the Street: Amateur Speed Sketching!", "author_url": "http:\/\/www.youtube.com\/user\/billyonthestreettv",
+        "provider_name": "YouTube", "width": 480, "version": "1.0", "thumbnail_height":
+        360, "provider_url": "http:\/\/www.youtube.com\/"}'
     http_version: 
-  recorded_at: Tue, 10 Jun 2014 19:31:20 GMT
+  recorded_at: Tue, 10 Jun 2014 19:33:02 GMT
 recorded_with: VCR 2.9.2
