--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,8 @@ rvm:
   - 2.1.0
   - 2.1.1
   - 2.1.2
-before_install: 'gem install bundler -v 1.6'
+before_install: "gem install bundler -v 1.6"
+script:
+  - bundle exec rake
+  - bundle exec rubocop
+
