Ignore '.ruby-version' since the project is supposed to support multiple versions of ruby (look at travis.yml for full list). Also fixed '.gitignore' to only ignore files based on <rootDir>

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
+*.a
 *.gem
+*.o
 *.rbc
+*.so
 .bundle
 .config
 .yardoc
-Gemfile.lock
+/*.bundle
+/.ruby-version
+/Gemfile.lock
+/coverage
+/doc/
+/lib/bundler/man
+/spec/cassettes/**/*.yml
+/spec/reports
+/test/tmp
+/test/version_tmp
+/tmp
 InstalledFiles
 _yardoc
-coverage
-doc/
-lib/bundler/man
+mkmf.log
 pkg
 rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.bundle
-*.so
-*.o
-*.a
-mkmf.log
-spec/cassettes/**/*.yml
