--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ before_install: "gem install bundler -v 1.6"
 script:
   - bundle exec rake
   - bundle exec rubocop
+sudo: false
+cache: bundler
 
