--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ rvm:
   - 2.2.0
 before_install: "gem install bundler -v 1.6"
 script:
-  - bundle exec rake
-  - bundle exec rubocop
+  - bundle exec rake ci
 sudo: false
 cache: bundler
 
