--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+sudo: false
+cache: bundler
 language: ruby
 rvm:
-  - 1.9.3
   - 2.0.0
   - 2.1.0
   - 2.1.1
@@ -8,11 +9,23 @@ rvm:
   - 2.1.3
   - 2.1.4
   - 2.1.5
+  - 2.1.6
+  - 2.1.7
   - 2.2.0
   - 2.2.1
   - 2.2.2
-before_install: "gem install bundler -v 1.10"
+  - 2.2.3
+  - ruby-head
+  - jruby-19mode
+  - jruby-9.0.1.0
+  - rbx-2
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-19mode
+    - rvm: jruby-9.0.1.0
+    - rvm: rbx-2
+before_install: 'gem install bundler -v 1.10.6'
 script:
   - bundle exec rake ci
-sudo: false
-cache: bundler
