--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*
+
 # I don't want to write documentation for every class
 Style/Documentation:
   Enabled: false
